--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="https://kit.fontawesome.com/9c0f37e22e.js" crossorigin="anonymous"></script>
     <title>pattern project</title>
 </head>
 <body>
@@ -35,10 +36,12 @@
             </form>
         </div>
     </div>
-</div>
+
 
 <h3 class="center align">Total Calories:<span class="total-calories">0</span></h3>
 
+    <ul id="item-list" class="collection"></ul>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="app.js"></script>
