--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     </div>
                     <button class="add-btn btn blue darken-3"><i class="fa fa-plus"></i>Add Meal</button>
                     <button class="second-btn btn orange" style="display: none"><i class="fas fa-pen"></i>   Update meal</button>
+                    <button class="btn delete-btn red"><i class="fa fa-remove"></i> Delete Meal</button>
                 </div>
             </form>
         </div>
